# ViviaScheduler

./: .gitignore  210baf40-0cda-4d4e-a616-4d0f97a12792.json  3.json  6.json  README.md  admin_ui.py  pyproject.toml  users.json
docs/: API.md  Architecture.md  Constraints.md  README.md  ScheduleInterval.md
src/vivia_v4/: admin_ui.py  constraints.py  indexes.py  main.py  model_definitions.py  scheduler.py  scheduling_context.py  task_pool.py  templates.py  utils.py  validators.py
src/vivia_v4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vivia_v4/api/: auth.py  config.py  main.py  manager.py
tests/: test_api_flow.py  test_global_constraints.py  test_templates.py  test_utils.py  test_validators.py  test_validators_aware_datetime_str.py  test_validators_interval.py  test_validators_zero_cmp.py
tests/pool/: test_task_pool.py
tests/scheduler/: test_empty_scheduler.py  test_exact_scheduler.py
tests/scheduler_tests/: test_scheduler_smoke.py
tests/templates/: test_exact_date.py  test_fixed_period.py
tests/utils/: test_interval_util.py
tests/validators/: test_interval_validators.py  test_zero_cmp_validators.py
tools/: generate_schema.py
