[project]
name = "vivia_v4"
version = "0.1.0"
description = "通用任务安排器，基于 OR-Tools CP-SAT，强类型工程。"
requires-python = ">=3.13"
dependencies = [
  "pydantic",
  "ortools",
  "fastapi",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff",
  "black",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "UP", "B", "ANN"]
